feat: complete stage 2 media and projects
